--- a/style.css
+++ b/style.css
@@ -77,3 +77,9 @@ button{
 .image-subtext {
     display:flex;
 }
+
+.image-box {
+    display:flex;
+    flex-direction: column;
+    padding:2%;
+}
